Local configuration with pricing to estimate compute usage

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
   - database@_global_: island_small
-  - evolution@_global_: small_budget
+  - evolution@_global_: small_budget_local
   - task@_global_: circle_packing
   - cluster@_global_: local
   - variant@_global_: circle_packing_example
